--- a/base.css
+++ b/base.css
@@ -22,14 +22,14 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-}
+} 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	/* Add background-color declaration here */
+	background-color: black; /* Add background-color declaration here */
 }
 ol, ul {
 	list-style: none;
